Update on buffs files and fonts

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script src="./node_modules/phaser/dist/phaser.min.js"></script>
-    <script src="./node_modules/phaser/dist/phaser-arcade-physics.js"></script>
-    <script src="./node_modules/phaser/dist/phaser-arcade-physics.min.js"></script>
-    <script src="./dist/game.js"></script>
-</head>
-<body>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <title>Krakens Onslaught Survival Prototype Version</title>
+        <link rel="preload" as="font" href="src/assets/Fonts/Minecraft.ttf" type="font/ttf" />
+        <link rel="stylesheet" href="src/assets/Styles/font.css">
+
+    </head>
+    <body>
+        <script src="./node_modules/phaser/dist/phaser.js"></script>
+        <script src="./node_modules/phaser/dist/phaser.min.js"></script>
+        <script src="./node_modules/phaser/dist/phaser-arcade-physics.js"></script>
+        <script src="./node_modules/phaser/dist/phaser-arcade-physics.min.js"></script>
+        <script src="./dist/game.js"></script>
+    </body>
 </html>
